tidying up stuff

--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<link rel="stylesheet" type="text/css" href="style.css">
-<body>
-<script src="//d3js.org/d3.v3.min.js"></script>
-<script src="//d3js.org/topojson.v1.min.js"></script>
-<script type="text/javascript" src="map.js"></script>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>D3: Setting path fills</title>
+    <script src="//d3js.org/d3.v3.min.js"></script>
+    <script type="text/javascript" src="map.js"></script>
+    <script type="text/javascript" src="app.js"></script>
+  </head>
+  <body>
+  </body>
+</html>
