--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>D3: Setting path fills</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="//d3js.org/d3.v3.min.js"></script>
     <script type="text/javascript" src="map.js"></script>
     <script type="text/javascript" src="app.js"></script>
