this was not trivial

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>D3: Setting path fills</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="//d3js.org/d3.v3.min.js"></script>
-    <script type="text/javascript" src="map.js"></script>
-    <script type="text/javascript" src="app.js"></script>
-  </head>
-  <body>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>D3: Setting path fills</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="//d3js.org/d3.v3.min.js"></script>
+  <script type="text/javascript" src="map.js"></script>
+  <script type="text/javascript" src="app.js"></script>
+</head>
+<body>
+  <div id="info" style="visibility:hidden">Info: <span>number</span></div>
+  <div id="map"></div>
+</body>
 </html>
