--- a/index.html
+++ b/index.html
@@ -2,17 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>D3: Setting path fills</title>
+  <title>U.S. Presidential Election 2016</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="//d3js.org/d3.v3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
   <script type="text/javascript" src="election-data.js"></script>
   <script type="text/javascript" src="map.js"></script>
   <script type="text/javascript" src="app.js"></script>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-87152302-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
 </head>
 <body>
+  <h1>U.S. Presidential Election 2016</h1>
   <div class="flex">
-    <div id="info"></div>
+    <div id="info">
+      <p>Click on a state to view election data.</p>
+      <p>Republican majorities are in <span class="republican">red</span> and democratic majorities are in <span class="democratic">blue</span></p>
+      <div></div>
+    </div>
     <div id="map"></div>
   </div>
 
