--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <title>U.S. Presidential Election 2016</title>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <script src="//d3js.org/d3.v3.min.js"></script>
+  <script src="http//d3js.org/d3.v3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
-  <script type="text/javascript" src="election-data.js"></script>
-  <script type="text/javascript" src="map.js"></script>
-  <script type="text/javascript" src="app.js"></script>
+  <script type="text/javascript" src="/data/election-data.js"></script>
+  <script type="text/javascript" src="/scripts/map.js"></script>
+  <script type="text/javascript" src="/scripts/app.js"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
